# shellhacks25

./: .gitignore  README.md
agent playground and testing/adk_api _server/: README
agent playground and testing/agent generation/: FUTURE_UPDATES.md  base_agent.py  basic_example_01.txt  billing_agent.yaml  chat_01.json  config_support_ticket_router.json  parsed_request_example.json  pipeline_design.md  plastes_design.md  request_example.txt  sequence_example_01.txt  starting_prompt_1.txt  support_ticket_router.yaml  support_ticket_router_v2.yaml  test_ticket_router.py  testing_strategy.md  tool_library.yaml  tool_library_v2.yaml  tool_registry.py
agent playground and testing/agent_network_MVP/: .env.example  (+14 more)
agent playground and testing/hatem/: .env  ADK_INTEGRATION.md  DEBUGGING_FIXES.md  README.md  SETUP_GUIDE.md  agent_registry.py  agents.py  compatibility_patch.py  config.py  content_creator_agent.py  data_analyst_agent.py  debug_utils.py  hiring_manager.py  hiring_manager_adk.py  main.py  pyproject.toml  quick_test.py  researcher_agent.py  run_tests.py  secretary_agent.py  secretary_agent_adk.py  start.py  test_platform.py  test_startup.py
agent playground and testing/hatem/adk_agents/hiring_manager/: __init__.py
agent playground and testing/hatem/adk_agents/secretary/: __init__.py
backend/: .env  README_A2A_SETUP.md  a2a_client_service.py  a2a_quickstart.py  env.example  main.py  requirements.txt  start_a2a_agents.py  start_backend.py  start_platform.py  test_integration.py
frontend/: env.local.example  package-lock.json  package.json  tailwind.config.js
(+77 files in other folders)
